<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BouncerActivity!</string>
    <string name="app_name">Bouncer</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="in_app_purchase">In-App Purchase</string>
    <string name="help">Help</string>
    <string name="about_text_pre_version">Bouncer\n</string>
    <string name="about_text_post_version">\n\nAll rights and reserved for\nVario Mobile Ltd.</string>
    <string name="help_text">\nHelp Text</string>
    <string name="create_password">Create Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="current_password">Current Password:</string>
    <string name="new_password">New Password:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="first_login">First Login</string>
    <string name="password">Password</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_mode">Privacy Mode</string>
    <string name="whether_privacy_mode">Whether phone is in private state</string>
    <string name="privacy_mode_on">Click to turn off private mode</string>
    <string name="privacy_mode_off">Click to turn on private mode</string>
    <string name="automatic_lock">Automatic Lock</string>
    <string name="request_password_every_launch">Request password on every launch</string>
    <string name="locking_timer">Locking Timer</string>
    <string name="request_password_time">Request password after</string>
    <string name="minutes">minutes</string>
    <string name="change_locking_timer">Change Locking Timer</string>
    <string name="change_locking_timer_click">Click here to change the duration of locking timer</string>
    <string name="change_time_dialog_title">Request password after:</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_click">Click here to change password</string>
    <string name="dial_dialog_title">Select number to dial</string>
    <string name="send_sms_dialog_title">Select number to send SMS to</string>
    <string name="contacts_tab_label">Contacts</string>
    <string name="conversations_tab_label">Conversations</string>
    <string name="calls_tab_label">Call Log</string>
    <string name="empty_fields">Please fill in all fields!</string>
    <string name="empty_password">Please enter password!</string>
    <string name="incorrect_old_password">Incorrect password!</string>
    <string name="incorrect_new_password">New Password not verified!</string>
    <string name="timer_two_minutes">The timer should be at least 2 minutes!</string>
    <string name="visible_contact_warning">In order to edit contact\'s details, \"un-hide\" contact or turn OFF privacy mode in the settings screen.</string>
    <string name="error">Error</string>
    <string name="warning">Pay Attention</string>
    <string name="gauge_message">Please wait...</string>
    <string name="me">Me</string>
    <string name="send">Send</string>
    <string name="edit_sms_hint">Type to compose</string>
    <string name="search_textfield_hint">Type to search...</string>
    <string name="error_hide_contact">Oops, we\'ve encountered a problem while trying to hide your contact!</string>
    <string name="error_reveal_contact">Oops, we\'ve encountered a problem while trying to restore your contact!</string>
    <string name="hide_contact_privacy_off">Privacy mode is off! Contact will be hidden when privacy is turned on.</string>
    <string name="private_number">Private number</string>
    <string name="exit_message">If you want to stay protected, just leave the application in the background by pressing the Home button.\n\nAre you sure you want to close Bouncer?</string>
    <string name="contact_context_menu_call">Call</string>
    <string name="contact_context_menu_sms">Send SMS</string>
    <string name="contact_context_menu_edit">Edit Contact</string>
    <string name="contact_context_menu_hide">Hide</string>
    <string name="contact_context_menu_unhide">Unhide</string>
    <string name="onboard_permissions_title">Onboard Permissions Title</string>
    <string name="onboard_permissions_subtitle">Onboard Permissions Subtitle</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="skip_permissions">Skip Permissions</string>
    <string name="returned_from_app_settings_to_activity">Returned from app settings to MainActivity with the following         permissions: \\\\nPermissions: %ss_to_activity</string>
    <string name="must_garnt_permission">In order to use the application clearly, you must grant the required permissions.</string>

</resources>